@@ -61,10 +61,6 @@ public class IndexNameExpressionResolver {
     public static final String EXCLUDED_DATA_STREAMS_KEY = "es.excluded_ds";
     public static final Version SYSTEM_INDEX_ENFORCEMENT_VERSION = Version.V_8_0_0;
 
-    private final DateMathExpressionResolver dateMathExpressionResolver = new DateMathExpressionResolver();
-    private final WildcardExpressionResolver wildcardExpressionResolver = new WildcardExpressionResolver();
-    private final List<ExpressionResolver> expressionResolvers = List.of(dateMathExpressionResolver, wildcardExpressionResolver);
-
     private final ThreadContext threadContext;
     private final SystemIndices systemIndices;
 
@@ -194,10 +190,7 @@ public class IndexNameExpressionResolver {
             indexExpressions = new String[] { "*" };
         }
 
-        List<String> expressions = Arrays.asList(indexExpressions);
-        for (ExpressionResolver expressionResolver : expressionResolvers) {
-            expressions = expressionResolver.resolve(context, expressions);
-        }
+        final List<String> expressions = resolveExpressions(Arrays.asList(indexExpressions), context);
         return ((expressions == null) ? List.<String>of() : expressions).stream()
             .map(x -> state.metadata().getIndicesLookup().get(x))
             .filter(Objects::nonNull)
@@ -228,10 +221,7 @@ public class IndexNameExpressionResolver {
             getNetNewSystemIndexPredicate()
         );
 
-        List<String> expressions = List.of(request.index());
-        for (ExpressionResolver expressionResolver : expressionResolvers) {
-            expressions = expressionResolver.resolve(context, expressions);
-        }
+        final List<String> expressions = resolveExpressions(List.of(request.index()), context);
 
         if (expressions.size() == 1) {
             IndexAbstraction ia = state.metadata().getIndicesLookup().get(expressions.get(0));
@@ -257,6 +247,10 @@ public class IndexNameExpressionResolver {
                 "unable to return a single target as the provided expression and options got resolved to multiple targets"
             );
         }
+    }
+
+    private static List<String> resolveExpressions(List<String> expressions, Context context) {
+        return WildcardExpressionResolver.resolve(context, DateMathExpressionResolver.resolve(context, expressions));
     }
 
     /**
@@ -333,9 +327,7 @@ public class IndexNameExpressionResolver {
             indexExpressions = new String[] { Metadata.ALL };
         } else {
             if (options.ignoreUnavailable() == false) {
-                List<String> crossClusterIndices = Arrays.stream(indexExpressions)
-                    .filter(index -> index.contains(":"))
-                    .collect(Collectors.toList());
+                List<String> crossClusterIndices = Arrays.stream(indexExpressions).filter(index -> index.contains(":")).toList();
                 if (crossClusterIndices.size() > 0) {
                     throw new IllegalArgumentException(
                         "Cross-cluster calls are not supported in this context but remote indices "
@@ -351,10 +343,7 @@ public class IndexNameExpressionResolver {
         final boolean failNoIndices = indexExpressions.length == 1
             ? options.allowNoIndices() == false
             : options.ignoreUnavailable() == false;
-        List<String> expressions = Arrays.asList(indexExpressions);
-        for (ExpressionResolver expressionResolver : expressionResolvers) {
-            expressions = expressionResolver.resolve(context, expressions);
-        }
+        final List<String> expressions = resolveExpressions(Arrays.asList(indexExpressions), context);
 
         if (expressions.isEmpty()) {
             if (options.allowNoIndices() == false) {
@@ -468,7 +457,7 @@ public class IndexNameExpressionResolver {
             .map(metadata::index)
             .filter(IndexMetadata::isSystem)
             .filter(idxMetadata -> systemIndexAccessPredicate.test(idxMetadata.getIndex().getName()))
-            .collect(Collectors.toList());
+            .toList();
 
         if (systemIndicesThatShouldNotBeAccessed.isEmpty()) {
             return;
@@ -651,7 +640,7 @@ public class IndexNameExpressionResolver {
     /**
      * @return If the specified string is data math expression then this method returns the resolved expression.
      */
-    public String resolveDateMathExpression(String dateExpression) {
+    public static String resolveDateMathExpression(String dateExpression) {
         return DateMathExpressionResolver.resolveExpression(dateExpression);
     }
 
@@ -659,7 +648,7 @@ public class IndexNameExpressionResolver {
      * @param time instant to consider when parsing the expression
      * @return If the specified string is data math expression then this method returns the resolved expression.
      */
-    public String resolveDateMathExpression(String dateExpression, long time) {
+    public static String resolveDateMathExpression(String dateExpression, long time) {
         return DateMathExpressionResolver.resolveExpression(dateExpression, () -> time);
     }
 
@@ -677,11 +666,7 @@ public class IndexNameExpressionResolver {
             getSystemIndexAccessPredicate(),
             getNetNewSystemIndexPredicate()
         );
-        List<String> resolvedExpressions = Arrays.asList(expressions);
-        for (ExpressionResolver expressionResolver : expressionResolvers) {
-            resolvedExpressions = expressionResolver.resolve(context, resolvedExpressions);
-        }
-        return Set.copyOf(resolvedExpressions);
+        return Set.copyOf(resolveExpressions(Arrays.asList(expressions), context));
     }
 
     /**
@@ -792,7 +777,6 @@ public class IndexNameExpressionResolver {
      * @return routing values grouped by concrete index
      */
     public Map<String, Set<String>> resolveSearchRouting(ClusterState state, @Nullable String routing, String... expressions) {
-        List<String> resolvedExpressions = expressions != null ? Arrays.asList(expressions) : Collections.emptyList();
         Context context = new Context(
             state,
             IndicesOptions.lenientExpandOpen(),
@@ -803,9 +787,10 @@ public class IndexNameExpressionResolver {
             getSystemIndexAccessPredicate(),
             getNetNewSystemIndexPredicate()
         );
-        for (ExpressionResolver expressionResolver : expressionResolvers) {
-            resolvedExpressions = expressionResolver.resolve(context, resolvedExpressions);
-        }
+        final List<String> resolvedExpressions = resolveExpressions(
+            expressions != null ? Arrays.asList(expressions) : Collections.emptyList(),
+            context
+        );
 
         // TODO: it appears that this can never be true?
         if (isAllIndices(resolvedExpressions)) {
@@ -832,11 +817,7 @@ public class IndexNameExpressionResolver {
                             if (routings == null) {
                                 routings = new HashMap<>();
                             }
-                            Set<String> r = routings.get(concreteIndex);
-                            if (r == null) {
-                                r = new HashSet<>();
-                                routings.put(concreteIndex, r);
-                            }
+                            Set<String> r = routings.computeIfAbsent(concreteIndex, k -> new HashSet<>());
                             r.addAll(aliasMetadata.searchRoutingValues());
                             if (paramRouting != null) {
                                 r.retainAll(paramRouting);
@@ -915,7 +896,7 @@ public class IndexNameExpressionResolver {
     /**
      * Sets the same routing for all indices
      */
-    public Map<String, Set<String>> resolveSearchRoutingAllIndices(Metadata metadata, String routing) {
+    public static Map<String, Set<String>> resolveSearchRoutingAllIndices(Metadata metadata, String routing) {
         if (routing != null) {
             Set<String> r = Sets.newHashSet(Strings.splitStringByCommaToArray(routing));
             Map<String, Set<String>> routings = new HashMap<>();
@@ -948,33 +929,6 @@ public class IndexNameExpressionResolver {
      */
     static boolean isExplicitAllPattern(Collection<String> aliasesOrIndices) {
         return aliasesOrIndices != null && aliasesOrIndices.size() == 1 && Metadata.ALL.equals(aliasesOrIndices.iterator().next());
-    }
-
-    /**
-     * Identifies whether the first argument (an array containing index names) is a pattern that matches all indices
-     *
-     * @param indicesOrAliases the array containing index names
-     * @param concreteIndices  array containing the concrete indices that the first argument refers to
-     * @return true if the first argument is a pattern that maps to all available indices, false otherwise
-     */
-    boolean isPatternMatchingAllIndices(Metadata metadata, String[] indicesOrAliases, String[] concreteIndices) {
-        // if we end up matching on all indices, check, if its a wildcard parameter, or a "-something" structure
-        if (concreteIndices.length == metadata.getConcreteAllIndices().length && indicesOrAliases.length > 0) {
-
-            // we might have something like /-test1,+test1 that would identify all indices
-            // or something like /-test1 with test1 index missing and IndicesOptions.lenient()
-            if (indicesOrAliases[0].charAt(0) == '-') {
-                return true;
-            }
-
-            // otherwise we check if there's any simple regex
-            for (String indexOrAlias : indicesOrAliases) {
-                if (Regex.isSimpleMatchPattern(indexOrAlias)) {
-                    return true;
-                }
-            }
-        }
-        return false;
     }
 
     public SystemIndexAccessLevel getSystemIndexAccessLevel() {
@@ -1182,25 +1136,16 @@ public class IndexNameExpressionResolver {
         }
     }
 
-    private interface ExpressionResolver {
-
-        /**
-         * Resolves the list of expressions into other expressions if possible (possible concrete indices and aliases, but
-         * that isn't required). The provided implementations can also be left untouched.
-         *
-         * @return a new list with expressions based on the provided expressions
-         */
-        List<String> resolve(Context context, List<String> expressions);
-
-    }
-
     /**
      * Resolves alias/index name expressions with wildcards into the corresponding concrete indices/aliases
      */
-    static final class WildcardExpressionResolver implements ExpressionResolver {
+    static final class WildcardExpressionResolver {
 
-        @Override
-        public List<String> resolve(Context context, List<String> expressions) {
+        private WildcardExpressionResolver() {
+            // Utility class
+        }
+
+        public static List<String> resolve(Context context, List<String> expressions) {
             IndicesOptions options = context.getOptions();
             Metadata metadata = context.getState().metadata();
             // only check open/closed since if we do not expand to open or closed it doesn't make sense to
@@ -1247,7 +1192,7 @@ public class IndexNameExpressionResolver {
             return new ArrayList<>(result);
         }
 
-        private Set<String> innerResolve(Context context, List<String> expressions, IndicesOptions options, Metadata metadata) {
+        private static Set<String> innerResolve(Context context, List<String> expressions, IndicesOptions options, Metadata metadata) {
             Set<String> result = null;
             boolean wildcardSeen = false;
             for (int i = 0; i < expressions.size(); i++) {
@@ -1464,7 +1409,7 @@ public class IndexNameExpressionResolver {
             return itemName.startsWith(".") && expression.startsWith(".") && Regex.isSimpleMatchPattern(expression);
         }
 
-        private boolean isEmptyOrTrivialWildcard(List<String> expressions) {
+        private static boolean isEmptyOrTrivialWildcard(List<String> expressions) {
             return expressions.isEmpty()
                 || (expressions.size() == 1 && (Metadata.ALL.equals(expressions.get(0)) || Regex.isMatchAllPattern(expressions.get(0))));
         }
@@ -1498,7 +1443,7 @@ public class IndexNameExpressionResolver {
                     }
                 }
                 return true;
-            }).collect(Collectors.toUnmodifiableList());
+            }).toList();
         }
 
         private static String[] resolveEmptyOrTrivialWildcardToAllIndices(IndicesOptions options, Metadata metadata) {
@@ -1520,7 +1465,7 @@ public class IndexNameExpressionResolver {
         }
     }
 
-    public static final class DateMathExpressionResolver implements ExpressionResolver {
+    public static final class DateMathExpressionResolver {
 
         private static final DateFormatter DEFAULT_DATE_FORMATTER = DateFormatter.forPattern("uuuu.MM.dd");
         private static final String EXPRESSION_LEFT_BOUND = "<";
@@ -1530,8 +1475,11 @@ public class IndexNameExpressionResolver {
         private static final char ESCAPE_CHAR = '\\';
         private static final char TIME_ZONE_BOUND = '|';
 
-        @Override
-        public List<String> resolve(final Context context, List<String> expressions) {
+        private DateMathExpressionResolver() {
+            // utility class
+        }
+
+        public static List<String> resolve(final Context context, List<String> expressions) {
             List<String> result = new ArrayList<>(expressions.size());
             for (String expression : expressions) {
                 result.add(resolveExpression(expression, context::getStartTime));
